# fzplug

./: Cargo.toml
src/: firefox.rs  main.rs  search.rs  ui.rs  utils.rs
