[package]
name = "fzplug"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
dirs = "6.0.0"
glob = "0.3.3"
reqwest = { version = "0.13.2", features = ["blocking", "json"] }
rusqlite = "0.38.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tempfile = "3.26.0"
